# jadu

./: .cursorignore  .env.example  .gitignore  agent.md  jAI-Agent-Framework.docx  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  researchAgentRequirement.md  run_ui.py  setup_and_run.bat  setup_and_run.ps1
.claude/: settings.local.json
apps/ui/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json  proxy.ts  tsconfig.json
apps/ui/app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
apps/ui/app/audio/: page.tsx
apps/ui/app/chat/: page.tsx
apps/ui/app/chat/[shared_id]/: page.tsx
apps/ui/app/components/: AudioUploader.tsx  ChatInterface.tsx  ProcessingOptions.tsx  ResultsPanel.tsx  Sidebar.tsx  index.ts
apps/ui/app/components/chat/: ChatContainer.tsx  ChatHeader.tsx  MeetingsModal.tsx  MessageInput.tsx  MessageList.tsx  index.ts
apps/ui/app/components/dashboard_v2/: ArchitectureView.tsx  AudioView.tsx  ChatPanel.tsx  CreateAgentView.tsx  DatabaseConfigModal.tsx  Header.tsx  InfographicView.tsx  NotificationCenter.tsx  QuizView.tsx  ShareModal.tsx  Sidebar.tsx  SlideDeckView.tsx  SourceItem.tsx  Stepper.tsx  StudioButton.tsx  StudioCustomizationModal.tsx  StudioPanel.tsx  UploadModal.tsx  VideoView.tsx
apps/ui/app/components/dashboard_v2/chat/: ChatHeader.tsx  ConnectionModal.tsx  EmptyState.tsx  MessageInput.tsx  MessageList.tsx  ServiceConnections.tsx  index.ts
apps/ui/app/components/studio/: ArchitectureView.tsx  ChatPanel.tsx  FlashcardsView.tsx  InfographicView.tsx  ReportView.tsx  ResizeHandle.tsx  StudioPanel.tsx  UploadModal.tsx
apps/ui/app/components/studio/chat/: ChatHeader.tsx  MessageInput.tsx  MessageList.tsx  index.ts
apps/ui/app/dashboard/: page.tsx
apps/ui/app/dashboard/v2/: page.tsx
apps/ui/app/knowledge/: page.tsx
apps/ui/app/lib/: api.ts  refrenceAudioRecorder.js  useAudioRecorder.ts  useLiveRecording.ts
apps/ui/app/lib/api/: index.ts  sessions.ts
apps/ui/app/lib/chat/: api.ts  types.ts  utils.ts
apps/ui/app/lib/websocket/: WebSocketContext.tsx  types.ts
apps/ui/app/share/[token]/: page.tsx
apps/ui/app/sign-in/[[...sign-in]]/: page.tsx
apps/ui/app/sign-up/[[...sign-up]]/: page.tsx
apps/ui/app/studio/: page.tsx
apps/ui/app/types/: react-markdown.d.ts  speech.d.ts
apps/ui/dummy_data/: dummy_data.json
data/uploads/: 272d00d7-4d7e-46b5-9289-e848ce1604d9.webm  55b3f235-b7c3-4208-930f-cdfbbbeb0348.webm  a18a3c95-3819-41e0-ba3c-57b9d7d1187a.webm  a8f8424e-66c9-472c-b70d-83bab5f1c2d2.webm  c0f0ff0e-478b-46f3-8dc3-f1d1dc7ae408.webm  ce602001-0ce6-414b-8f40-e848c736342a.webm  ea63f97c-1515-40af-ad4e-950d6cfadf11.webm
docs/: DEVELOPMENT.md
examples/: basic_usage.py  github_integration_example.py  langchain_agent_example.py
infrastructure/docker/: docker-compose.yml
infrastructure/docker/init-scripts/: 01_init_schema.sql
mcp-servers/zoho-cliq/: package-lock.json  package.json
mcp-servers/zoho-cliq-mcp/: package-lock.json
mcp-servers/zoho-cliq/src/: index.ts
mcp-servers/zoho-mail/: package-lock.json  package.json
mcp-servers/zoho-mail-mcp/: package-lock.json
mcp-servers/zoho-mail/src/: index.ts
mcp-servers/zoom/: package-lock.json  package.json
mcp-servers/zoom-mcp/: package-lock.json
mcp-servers/zoom/src/: index.ts
scripts/: run-python-service.js  setup-python-services.ps1  setup-python-services.sh
services/agents/: pyproject.toml
services/agents/src/: config.py  llm_factory.py
services/agents/src/agents/: __init__.py  agenda_agent.py  analytics_agent.py  analytics_agent_example.py  chat_agent.py  gemini_transcription_agent.py  intent_agent.py  keyword_agent.py  mood_agent.py  research_agent.py  summarization_agent.py  translation_agent.py
services/agents/src/database/: __init__.py  base.py  factory.py  postgresql_provider.py
services/agents/src/utils/: mcp_client.py
services/intellibooks_db/: __init__.py
services/intellibooks_db/database/: __init__.py  config.py  connection.py
services/intellibooks_db/database/repositories/: __init__.py  credential_repo.py  document_repo.py  message_repo.py  session_repo.py
services/rag/src/: config.py  rag_pipeline.py
services/rag/src/api/: main.py
services/rag/src/query_engine/: rag_engine.py
services/rag/src/retriever/: semantic_retriever.py
services/rag/src/vector_store/: chroma_store.py
services/rbac/: package.json
services/rbac/src/routes/: users.ts
services/rbac/src/services/: user.ts
services/websocket/: .env.example  README.md  pyproject.toml
services/websocket/src/: config.py  main.py
services/websocket/src/handlers/: __init__.py  chat_handler.py  research_handler.py  smart_handler.py
services/websocket/src/models/: db.py  messages.py
services/websocket/src/models/routes/: __init__.py  conversations.py  meetings.py  notifications.py  oauth.py  transcription.py
services/websocket/src/routes/: __init__.py  conversations.py  meetings.py  transcription.py
services/websocket/src/utils/: __init__.py  background_processor.py  clerk.py  diarization.py  permissions.py  redis_client.py  whisper.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py  intent.py  keyword.py  summarization.py  transcription.py  translation.py
src/database/: __init__.py  connection.py  models.py
src/integrations/: __init__.py  github.py
src/llm/: __init__.py  provider.py
src/mcp/: __init__.py  client.py  server.py  tools.py
src/orchestrator/: __init__.py  state.py  workflow.py
src/tools/: __init__.py  langchain_tools.py
src/ui/: __init__.py  app.py
src/ui/templates/: index.html
