[project]
name = "intellibooks-studio"
version = "1.0.0"
description = "Intellibooks Studio - AI-Powered Document Intelligence Platform with RAG, Agents, and MCP"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Intellibooks Team" }
]
keywords = ["ai", "rag", "agents", "mcp", "transcription", "nlp", "document-processing"]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # Audio processing
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "imageio-ffmpeg>=0.4.0",

    # Vector database / RAG
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",

    # Distributed processing
    "pika>=1.3.0",

    # Document processing
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",

    # OCR for scanned PDFs (requires Tesseract and Poppler system dependencies)
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",

    # NLP utilities
    "nltk>=3.8.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

ray = [
    # Ray for distributed processing (Linux/Mac only, use Docker on Windows)
    "ray[default]>=2.9.0",
]

ui = [
    "jinja2>=3.1.0",
]

all = [
    "intellibooks-studio[dev,ui]",
]

[project.urls]
Homepage = "https://github.com/intellibooks/intellibooks-studio"
Documentation = "https://github.com/intellibooks/intellibooks-studio#readme"
Repository = "https://github.com/intellibooks/intellibooks-studio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
