[project]
name = "intellibooks-agent-service"
version = "1.0.0"
description = "Agent Service for Intellibooks Studio - Transcription, Translation, Summarization, Intent Detection, Keyword Extraction, and Research with Deep Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Intellibooks Team" }
]
keywords = ["agents", "transcription", "whisper", "langchain", "langgraph", "deepagents", "nlp", "ai", "rag"]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",

    # LangChain & LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "deepagents>=0.1.0",
    
    # OpenAI client for direct API access (needed for audio transcription)
    "openai>=1.0.0",

    # Audio processing
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "imageio-ffmpeg>=0.4.0",

    # ML/AI
    "torch>=2.0.0",
    "numpy>=1.24.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",

    # NLP
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

spacy = [
    "spacy>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/intellibooks/intellibooks-studio"
Repository = "https://github.com/intellibooks/intellibooks-studio/tree/main/services/agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
