[project]
name = "intellibooks-websocket-service"
version = "1.0.0"
description = "WebSocket Service for Intellibooks Studio - Real-time chat messaging"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
    "imageio-ffmpeg>=0.4.0",  # For audio format conversion
    "pyannote.audio>=3.1.0",  # For speaker diarization
    "torch>=2.0.0",  # For pyannote.audio
    "torchaudio>=2.0.0",  # For audio processing
    "arrow>=1.3.0",  # Luxon-like datetime library
    "asyncpg>=0.29.0",  # For PostgreSQL persistence
    "python-dotenv>=1.0.0",  # For environment variables
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

